# l2tv-tauri

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Electron版データ引継ぎツール.txt  LICENSE  README.md  RELEASE_NOTES_3.0.0.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  readme.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: bootstrap-import-v2.yml  bootstrap-import.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml  security-audit.yml
public/: app.js  calendar.css  calendar.html  calendar.js  index.html  l2tv-architecture-manual.html  styles.css  tauri-bridge.js
public/assets/force-rank-badges/: rank_badges.json
public/data/: force-chart-constants.json  ir-rank-top100.json  local-course-hashes.json
scripts/: electron-transfer-exporter-smoke.mjs  generate-ir-rank-index.py  package-release.ps1  prepare-frontend.mjs  prepare-frontend.test.mjs  security-config.test.mjs  tauri-e2e-smoke.mjs  verify-release.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/examples/: api_probe.rs
src-tauri/src/: api.rs  beatoraja_random.rs  commands.rs  database.rs  electron_transfer_exporter.rs  error.rs  external.rs  lib.rs  main.rs  openlr2_random.rs  security.rs  stellaverse.rs  tables.rs
