[package]
name = "l2tv-tauri"
version = "3.1.0"
description = "L2TV Tauri 2 edition"
authors = ["HiLowPsi"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hirosiHiLowPsi/l2tv-tauri"

[lib]
name = "l2tv_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "L2TV"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
encoding_rs = "0.8"
futures-util = "0.3"
hex = "0.4"
ipnet = "2"
once_cell = "1"
rand = "0.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "charset", "gzip", "http2", "json", "rustls-tls"] }
rfd = "0.17"
rusqlite = { version = "0.40", features = ["bundled"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
sha2 = "0.11"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "net", "rt-multi-thread", "sync", "time"] }
url = "2"
walkdir = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"

[patch.crates-io]
block-buffer = { path = "../vendor/block-buffer-0.12.1" }
const-oid = { path = "../vendor/const-oid-0.10.2" }
crypto-common = { path = "../vendor/crypto-common-0.2.2" }
cssparser = { path = "../vendor/cssparser-0.37.0" }
cssparser-macros = { path = "../vendor/cssparser-macros-0.7.0" }
digest = { path = "../vendor/digest-0.11.3" }
ego-tree = { path = "../vendor/ego-tree-0.11.0" }
hashbrown = { path = "../vendor/hashbrown-0.16.1" }
hashlink = { path = "../vendor/hashlink-0.12.1" }
html5ever = { path = "../vendor/html5ever-0.39.0" }
hybrid-array = { path = "../vendor/hybrid-array-0.4.13" }
libsqlite3-sys = { path = "../vendor/libsqlite3-sys-0.38.1" }
markup5ever = { path = "../vendor/markup5ever-0.39.0" }
rfd = { path = "../vendor/rfd-0.17.2" }
rsqlite-vfs = { path = "../vendor/rsqlite-vfs-0.1.1" }
rusqlite = { path = "../vendor/rusqlite-0.40.1" }
scraper = { path = "../vendor/scraper-0.27.0" }
selectors = { path = "../vendor/selectors-0.38.0" }
sha1 = { path = "../vendor/sha1-0.11.0" }
sha2 = { path = "../vendor/sha2-0.11.0" }
sqlite-wasm-rs = { path = "../vendor/sqlite-wasm-rs-0.5.5" }
